# ricardo-pneus

./: .gitignore  INSTALL.md  PRD.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: windows-build.yml
backend/: main.py  requirements.txt
backend/app/: database.py
backend/app/models/: __init__.py  cliente.py  financeiro.py  produto.py
backend/app/routes/: backup.py  clientes.py  dashboard.py  financeiro.py  produtos.py  relatorios.py
scripts/: build-backend.ps1  build-backend.sh  make_logo.py  seed_fluxo.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ConfirmDialog.tsx  Layout.tsx  PageLoader.tsx  ProductPicker.tsx
src/components/ui/: label.tsx  select.tsx  textarea.tsx
src/lib/: api.ts  updater.ts
src/pages/: Backup.tsx  Dashboard.tsx  Estoque.tsx  Fiado.tsx  Financeiro.tsx  Relatorios.tsx  Reposicao.tsx
