[package]
name = "ricardo-pneus-app"
version = "0.1.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ricardo_pneus_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# O updater/process só fazem sentido no desktop (não no mobile)
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"

# Profile de release otimizado para TEMPO DE COMPILAÇÃO no CI (não para performance
# máxima do binário). Para este app de desktop a diferença de runtime é irrelevante,
# mas o build fica bem mais rápido no GitHub Actions (Windows).
[profile.release]
opt-level = 1
lto = false
codegen-units = 16
incremental = false
strip = true

